# INF2008

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: circular_unet_pipeline.md  dataset_generation.md  deepdrr_integration.md  inference_benchmark.md  neck_bbox_detection.md  overlay_reconstruction.md  patient_level_eval.md  prepare_unet_tiles.md  preprocess_compare.md  running_unet.md  running_unet_with_deepdrr.md  segment_detection_pipeline.md  train_unet.md  unet_positional_channels.md
docs/notes/: neck_bbox_mask_cleaning.md
scripts/: add_neck_artifacts.py  benchmark_inference_speed.py  build_pseudo_dataset.sh  build_pseudo_dataset_all_slices.sh  build_pseudo_dataset_step1of2.sh  clean_bitmasks_priority.py  crop_frames_from_yolo.py  curate_cropped_frames_to_yolo.py  eval_unet_iou.py  export_full_masks_to_yolo.py  export_neck_bbox_yolo.py  export_vertebra_yolo.py  extract_unet_crops.py  extract_vertebra_crops.py  infer_yolo_unet.py  iterative_crop_yolo.py  overlay_gt_pred_comparison.py  overlay_labels_from_bitmask.py  overlay_yolo_labels.py  prepare_vertebra_unet_splits.py  preprocess_frames_for_yolo.py  preview_bbox_on_circular_synth.py  preview_bbox_on_clahe2.py  rebuild_neck_crops.py  render_yolo_overlays.py  run_vertebra_pipeline.py  verify_label_crops.py
src/spine_segmentation/: cli.py
src/spine_segmentation/commands/: annotate_overlay.py  bank_export.py  build_bank.py  build_hf_projection.py  build_pseudo_lateral.py  build_synth.py  colorize_labels.py  compare_masks.py  deepdrr_project.py  download.py  extract_frames.py  frames_manifest.py  root.py  (+11 more)
(+12 files in other folders)
